<resources>
    <string name="app_name">Venuify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1_fragment">Tab 1 Fragment</string>
    <string name="tab_2_fragment">tab 2 fragment</string>
    <string name="tab_3_fragment">tab 3 fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_reservation_page1">Reservation Page</string>
    <string name="title_activity_past_reservation">Past Reservations</string>
    <string name="title_activity_pending_reservation">Pending Reservations</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_new_username">Enter User Name</string>
    <string name="create_user">Create User</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="venue_image">Venue Image</string>
    <string name="logout">Logout</string>
    <string name="homepage">homepage</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reservation_details_page">Reservation Details Page</string>
    <string name="reservation_page">reservation page</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="qr_reader">QR Reader</string>
    <string name="reservation">Reservation</string>
    <string name="search_hint">Search Venues</string>
    <string name="account">Account</string>
    <string name="pending1">Pending</string>
    <string name="upcoming1">Upcoming</string>
    <string name="past1">Past</string>
    <string name="pending2">Pending</string>
    <string name="upcoming2">Upcoming</string>
    <string name="past2">Past</string>
    <string name="pending3">Pending</string>
    <string name="upcoming3">Upcoming</string>
    <string name="past3">Past</string>
    <string name="reservation_at">Reservation at:</string>
    <string name="resvenuename">ResVenueName</string>
    <string name="resdate">resDate</string>
    <string name="restime">ResTime</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="reservation_venue">Reservation Venue:</string>
    <string name="begin_scan">Begin Scan</string>
    <string name="venue">Venue</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="price">Price</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="exit">Exit</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="venuify_login">Venuify login</string>
</resources>