<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservationPage.ReservationPagePendingActivity">

    <include
        layout="@layout/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/upcoming2button"
            android:layout_width="138dp"
            android:layout_height="59dp"
            android:text="@string/upcoming2"
            android:translationY="-5dp"
            android:onClick="onClick"
            app:layout_constraintEnd_toStartOf="@+id/pending2button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <Button
            android:id="@+id/past2button"
            android:layout_width="138dp"
            android:layout_height="59dp"
            android:text="@string/past2"
            android:translationY="-5dp"
            android:onClick="onClick"
            app:layout_constraintBaseline_toBaselineOf="@+id/pending2button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pending2button" />

        <Button
            android:id="@+id/pending2button"
            android:layout_width="138dp"
            android:layout_height="59dp"
            android:text="@string/pending2"
            android:translationY="-5dp"
            app:layout_constraintEnd_toStartOf="@+id/past2button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/upcoming2button"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:theme="@style/Theme.Venuify.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.Venuify.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPendingReservationPage"
            android:layout_width="409dp"
            android:layout_height="562dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pending2button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>